# segment-tree-realization

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/tree/: SegmentTree.cpp  SegmentTree.h
src/tree/base-segment-tree/: SegmentTree.cpp
src/tree/lazyPropagation/: SegmentTreeWithLazyPropagation.cpp  SegmentTreeWithLazyPropagation.h
src/tree/persistent/: PersistentSegmentTree.cpp  PersistentSegmentTree.h  newMain.cpp
src/tree/persistent-segment-tree/: PersistentSegmentTree.cpp
src/u-tests/: build.txt  get-max-range-100.txt  main.py  rsq-random-ranges.txt  rsq-range-length-20.txt  tests.cpp  update.txt
src/u-tests/persistent-tree-tests/: build-persistent-tree.txt  rsq-random-range-persistent-tree.txt  upgrade-to-new-version.txt
src/u-tests/tests-data/: build-max.txt  get-max-random-ranges.txt  rsq-range-length-100.txt
src/utils/: ArraysFunctions.cpp  ArraysFunctions.h
